<resources>
    <string name="app_name">InstaLogin</string>
    <string name="instagram">Instagram</string>
    <string name="phone_number_email_or_username">Phone number, email or username</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="password">Password</string>
    <string name="get_help_logging_in">Get help logging in</string>
    <string name="or">OR</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
</resources>