<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    >

    <TextView
        android:id="@+id/logo"
        style="@style/signup"
        android:layout_width="332dp"
        android:layout_height="70dp"
        android:fontFamily="@font/billabong"
        android:text="@string/instagram"
        android:textAlignment="center"
        android:textSize="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />

    <EditText
        android:id="@+id/username"
        style="@style/editText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/phone_number_email_or_username"
        android:inputType="textPersonName"
        android:background="@drawable/roundstyle"
        android:padding="10dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextSizeCheck">

    </EditText>

    <TextView
        android:id="@+id/forgot"
        style="@style/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_your_login_details"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_with_facebook"
        android:textColor="#1F4CEF"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OR"
        tools:ignore="TextSizeCheck" />

    <View
        android:id="@+id/orLeft"
        android:layout_width="140dp"
        android:layout_height="4dp"
        android:layout_marginTop="36dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helper" />

    <View
        android:id="@+id/orRight"
        android:layout_width="140dp"
        android:layout_height="4dp"
        android:layout_marginTop="36dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot" />

    <EditText
        android:id="@+id/Password"
        style="@style/editText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#232323"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/helper"
        style="@style/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/get_help_logging_in"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/forgot"
        app:layout_constraintTop_toBottomOf="@id/Login"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/OR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/orLeft"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/orRight"
        app:layout_constraintTop_toBottomOf="@+id/forgot">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login"
        style="@style/BUTTON"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#1E2B6A"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password" />

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noAcc"
        style="@style/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account"
        android:layout_marginLeft="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomDivider" />

    <TextView
        style="@style/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/noAcc"
        app:layout_constraintTop_toBottomOf="@id/bottomDivider" />


</androidx.constraintlayout.widget.ConstraintLayout>